<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main_navigation"
  app:startDestination="@+id/nav_main">

  <fragment
    android:id="@+id/nav_main"
    android:name="cn.taketoday.robot.fragment.ControlFragment"
    android:label="@string/main_title"
    tools:layout="@layout/fragment_control" />

  <fragment
    android:id="@+id/nav_settings"
    android:name="cn.taketoday.robot.fragment.SettingsFragment"
    android:label="@string/settings_robot"
    tools:layout="@layout/fragment_settings">

    <action
      android:id="@+id/action_nav_settings_to_nav_device_connection"
      app:destination="@id/nav_device_connection" />

  </fragment>

  <fragment
    android:id="@+id/nav_about"
    android:name="cn.taketoday.robot.fragment.AboutFragment"
    android:label="@string/menu_about"
    tools:layout="@layout/fragment_about" />

</navigation>