<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 - 2025 the original author or authors.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see [https://www.gnu.org/licenses/]
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group android:checkableBehavior="single">

    <item
      android:id="@+id/nav_device_connection"
      android:icon="@mipmap/icon_bluetooth"
      android:title="@string/connect_robot" />

    <item
      android:id="@+id/nav_settings"
      android:icon="@drawable/settings_black"
      android:title="@string/settings_robot" />

    <item
      android:id="@+id/nav_about"
      android:icon="@android:drawable/ic_dialog_info"
      android:title="@string/menu_about" />

  </group>


</menu>