<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 - 2025 the original author or authors.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see [https://www.gnu.org/licenses/]
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@+id/menu_connect"
    android:icon="@drawable/device_access_bluetooth"
    android:title="@string/connect_robot"
    app:showAsAction="ifRoom|withText" />

  <item
    android:id="@+id/menu_settings"
    android:icon="@drawable/settings_black"
    android:title="@string/settings_robot"
    app:showAsAction="ifRoom|withText" />


  <item
    android:id="@+id/menu_main"
    android:title="@string/control_panel"
    app:showAsAction="never" />

  <item
    android:id="@+id/menu_action_debug"
    android:title="调试模式"
    app:showAsAction="never" />

  <item
    android:id="@+id/menu_action_about"
    android:title="关于"
    app:showAsAction="never" />


</menu>
