<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 - 2025 the original author or authors.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see [https://www.gnu.org/licenses/]
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/nav_device_connection">

  <fragment
    android:id="@+id/nav_device_connection"
    android:name="cn.taketoday.robot.fragment.ControlFragment"
    android:label="@string/nav_home"
    tools:layout="@layout/fragment_control" />

  <fragment
    android:id="@+id/nav_settings"
    android:name="cn.taketoday.robot.fragment.SettingsFragment"
    android:label="@string/settings_robot"
    tools:layout="@layout/fragment_settings">
    <action
      android:id="@+id/action_nav_settings_to_nav_device_connection"
      app:destination="@id/nav_device_connection" />
  </fragment>

  <fragment
    android:id="@+id/nav_about"
    android:name="cn.taketoday.robot.fragment.AboutFragment"
    android:label="@string/menu_about"
    tools:layout="@layout/fragment_about" />

</navigation>